Tweak misc variables

--- a/src/components/block-gallery/styles/editor/_remove-gallery-item-button.scss
+++ b/src/components/block-gallery/styles/editor/_remove-gallery-item-button.scss
@@ -22,7 +22,7 @@
 		&:hover {
 			background: $blue !important;
 			border-color: $blue !important;
-			color: #fff !important;
+			color: $white !important;
 			opacity: 0.75;
 		}
 	}
