--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -145,8 +145,8 @@
 		}
 
 		.components-button {
-			border: 0;
 			background: $light-gray-300;
+			border: 0;
 			border-radius: 0 !important;
 			box-shadow: none;
 			height: 100%;
@@ -158,17 +158,17 @@
 			}
 
 			&:hover {
-				background: #e3e4e7;
+				background: $light-gray-500;
 				box-shadow: inset 0 0 0 1px $dark-gray-500, inset 0 0 0 2px $white;
 			}
 
 			&:active:enabled {
-				background: #e3e4e7;
+				background: $light-gray-500;
 				box-shadow: inset 0 0 0 1px $dark-gray-500, inset 0 0 0 2px $white;
 			}
 
 			&:focus:enabled {
-				background: #e3e4e7;
+				background: $light-gray-500;
 				box-shadow: inset 0 0 0 1px $dark-gray-500, inset 0 0 0 2px $white;
 			}
 		}
