--- a/src/blocks/icon/styles/editor.scss
+++ b/src/blocks/icon/styles/editor.scss
@@ -50,20 +50,20 @@
 }
 
 .coblocks-icon-types-list.editor-block-types-list {
-	list-style: none;
-	overflow: hidden;
 	display: flex;
 	flex-wrap: wrap;
+	list-style: none;
 	margin-top: 0;
 	max-height: 170px;
+	overflow: hidden;
 	overflow-y: scroll;
 	padding: 4px 0 0 0;
 
 	.editor-block-types-list__list-item {
+		display: block;
 		margin: 0 0 8px;
 		padding: 0 4px;
 		width: 29.9%;
-		display: block;
 
 		@media screen and (max-width: 782px) {
 			width: 31.5%;
@@ -86,7 +86,7 @@
 			width: 100%;
 
 			&:hover {
-				background: #f8f9f9;
+				background: $light-gray-100;
 
 				svg {
 					fill: $dark-gray-900;
@@ -95,13 +95,13 @@
 
 			&:focus,
 			&:active:enabled {
-				background: #f8faf9;
-				box-shadow: 0 0 0 3px #f8faf9;
+				background: $light-gray-100;
+				box-shadow: 0 0 0 3px $light-gray-100;
 				outline: none;
 			}
 
 			svg {
-				fill: #3f464d;
+				fill: $dark-gray-500;
 				height: 20px;
 				margin: 0;
 				overflow: hidden;
@@ -117,12 +117,12 @@
 
 		&.selected-svg {
 			.components-button {
-				background: #e3e4e7;
-				border-color: #e3e4e7;
+				background: $light-gray-500;
+				border-color: $light-gray-500;
 				pointer-events: none;
 
 				svg {
-					fill: #3f464d;
+					fill: $dark-gray-500;
 				}
 			}
 		}
@@ -132,7 +132,7 @@
 				&,
 				&:focus {
 					background: transparent;
-					box-shadow: 0 0 0 2px #fff, 0 0 0 4px $dark-gray-500;
+					box-shadow: 0 0 0 2px $white, 0 0 0 4px $dark-gray-500;
 				}
 			}
 		}
