--- a/src/blocks/social/styles/editor.scss
+++ b/src/blocks/social/styles/editor.scss
@@ -1,7 +1,5 @@
 .wp-block-coblocks-social {
-
 	&__button {
-
 		&:active {
 			animation: none !important;
 		}
@@ -9,7 +7,6 @@
 }
 
 .editor-block-preview__content {
-
 	.wp-block-coblocks-social {
 		align-content: center;
 		align-items: center;
@@ -19,7 +16,6 @@
 		text-align: center !important;
 
 		&.is-style-mask {
-
 			.wp-block-coblocks-social__icon {
 				position: relative;
 				top: 4px;
@@ -28,15 +24,12 @@
 
 		&.is-style-text,
 		&.is-style-icon-and-text {
-
 			.wp-block-coblocks-social__button {
 				width: 75%;
 			}
-
 		}
 
 		&.is-style-icon-and-text {
-
 			.wp-block-coblocks-social__text {
 				margin-left: 4px;
 			}
@@ -50,7 +43,8 @@
 				display: block;
 			}
 
-			&:before, &:after{
+			&::before,
+			&::after {
 				display: none;
 			}
 		}
@@ -63,11 +57,11 @@
 		}
 
 		&__button {
-			max-width: 100%;
 			margin: 0;
-			width: 100%;
+			max-width: 100%;
 			padding-left: 10px;
 			padding-right: 10px;
+			width: 100%;
 		}
 	}
 }
