--- a/src/components/orientation/styles/editor.scss
+++ b/src/components/orientation/styles/editor.scss
@@ -12,7 +12,7 @@
 		margin-bottom: 4px;
 
 		.is-primary + .is-primary {
-			border-left: 1px solid rgba(#fff, 0.2);
+			border-left: 1px solid rgba($white, 0.2);
 		}
 	}
 
