--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -105,11 +105,11 @@
 	// Individual toggleable buttons.
 	.coblocks-block-manager__button.components-button {
 		align-items: stretch;
-		background: #f3f4f5;
+		background: $dark-gray-700;
 		border: 1px solid transparent;
 		border-radius: 4px;
 		box-shadow: none;
-		color: #32373c;
+		color: $dark-gray-700;
 		cursor: pointer;
 		display: flex;
 		flex-direction: column;
@@ -126,7 +126,7 @@
 		}
 
 		.coblocks-block-manager__button-label {
-			color: #32373c;
+			color: $dark-gray-700;
 		}
 
 		// Reset for button states.
@@ -159,21 +159,21 @@
 
 			&:active:enabled,
 			&:active:enabled:hover {
-				background: #f8f9f9;
+				background: $light-gray-100;
 
 				.coblocks-block-manager__button-icon {
 					color: $dark-gray-900;
 				}
 
 				.coblocks-block-manager__button-label {
-					color: #32373c;
+					color: $dark-gray-700;
 				}
 			}
 		}
 
 		&:focus:enabled,
 		&:active:enabled {
-			background: #f8f9f9;
+			background: $light-gray-100;
 			box-shadow: 0 0 0 2px $blue-medium-500;
 			outline: 2px solid transparent;
 			outline-offset: -2px;
@@ -184,18 +184,18 @@
 
 			.coblocks-block-manager__button-icon,
 			.coblocks-block-manager__button-label {
-				color: #a2aab2 !important;
+				color: $light-gray-900 !important;
 			}
 
 			&:hover {
-				background: #f8f9f9;
+				background: $light-gray-100;
 
 				.coblocks-block-manager__button-icon {
 					color: $dark-gray-900 !important;
 				}
 
 				.coblocks-block-manager__button-label {
-					color: #32373c !important;
+					color: $dark-gray-700 !important;
 				}
 			}
 
@@ -205,21 +205,21 @@
 				&:hover {
 					.coblocks-block-manager__button-icon,
 					.coblocks-block-manager__button-label {
-						color: #a2aab2 !important;
+						color: $light-gray-900 !important;
 					}
 				}
 			}
 
 			&:active:enabled,
 			&:active:enabled:hover {
-				background: #f8f9f9;
+				background: $light-gray-100;
 
 				.coblocks-block-manager__button-icon {
 					color: $dark-gray-900 !important;
 				}
 
 				.coblocks-block-manager__button-label {
-					color: #32373c !important;
+					color: $dark-gray-700 !important;
 				}
 			}
 		}
