--- a/src/components/grid-control/styles/editor.scss
+++ b/src/components/grid-control/styles/editor.scss
@@ -14,7 +14,7 @@
 	}
 
 	.components-toggle-control {
-		border-top: 1px solid #e2e4e7;
+		border-top: 1px solid $light-gray-500;
 		color: $dark-gray-500;
 		margin: 16px -16px -16px;
 		padding: 18px 16px 14px;
