--- a/src/styles/admin/_dashboard-widget.scss
+++ b/src/styles/admin/_dashboard-widget.scss
@@ -47,7 +47,7 @@
 		}
 
 		ul {
-			background-color: #fafafa;
+			background-color: $light-gray-100;
 			margin-bottom: -6px;
 			margin-left: -12px;
 			margin-right: -12px;
