--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -21,7 +21,7 @@
 		margin-right: 0.7em;
 
 		svg {
-			fill: #23282d; // Same color as modal headings.
+			fill: $dark-gray-800; // Same color as modal headings.
 			position: relative;
 			top: 0.16em;
 		}
