--- a/src/components/block-gallery/styles/style/_flickity.scss
+++ b/src/components/block-gallery/styles/style/_flickity.scss
@@ -1,4 +1,3 @@
-// Flickity v2.1.2
 .flickity-enabled {
 	position: relative;
 
@@ -12,9 +11,9 @@
 }
 
 .flickity-viewport {
+	height: 100%;
 	overflow: hidden;
 	position: relative;
-	height: 100%;
 
 	.is-cropped & {
 		height: 100% !important;
@@ -22,9 +21,9 @@
 }
 
 .flickity-slider {
+	height: 100%;
 	position: absolute;
 	width: 100%;
-	height: 100%;
 }
 
 .flickity-enabled.is-draggable .flickity-viewport {
@@ -41,9 +40,9 @@
 .flickity-button {
 	background: hsla(0, 0%, 100%, 0.75);
 	border: none;
-	color: #000;
-	position: absolute;
+	color: $black;
 	padding: 0;
+	position: absolute;
 	transition: background 100ms, opacity 100ms;
 
 	&:hover {
@@ -52,10 +51,10 @@
 	}
 
 	&:focus {
-		outline: none;
-		border: none;
 		background: $white;
-		box-shadow: 0 0 0 2px #000;
+		border: none;
+		box-shadow: 0 0 0 2px $black;
+		outline: none;
 	}
 
 	&:active {
@@ -64,30 +63,30 @@
 	}
 
 	&:disabled {
-		opacity: 0.25;
 		cursor: auto;
+		opacity: 0.25;
 		pointer-events: none;
 	}
 }
 
 .flickity-button-icon {
-	fill: #000;
+	fill: $black;
 	transform: translate3d(0, 0, 0);
 }
 
 .flickity-prev-next-button {
-	top: 50%;
-	width: 57px;
-	height: 72px;
 	border-radius: 9px;
+	height: 72px;
+	top: 50%;
 	transform: translateY(-50%);
+	width: 57px;
 
 	.has-top-left-carousel-arrows & {
+		border-radius: 4px;
+		height: 42px;
 		top: 20px;
 		transform: none;
 		width: 42px;
-		height: 42px;
-		border-radius: 4px;
 
 		&.previous {
 			left: 20px;
@@ -125,8 +124,8 @@
 }
 
 .flickity-rtl .flickity-prev-next-button.next {
-	right: auto;
 	left: 10px;
+	right: auto;
 
 	@media (min-width: 600px) {
 		left: 20px;
@@ -134,11 +133,11 @@
 }
 
 .flickity-prev-next-button .flickity-button-icon {
-	position: absolute;
+	height: 50%;
 	left: 23%;
+	position: absolute;
 	top: 25%;
 	width: 50%;
-	height: 50%;
 }
 
 .previous.flickity-prev-next-button .flickity-button-icon {
@@ -146,14 +145,14 @@
 }
 
 .flickity-page-dots {
-	position: absolute;
-	width: 100%;
 	bottom: 18px;
-	padding: 0 !important;
-	margin: 0 !important;
-	list-style: none;
-	text-align: center;
 	line-height: 1;
+	list-style: none;
+	margin: 0 !important;
+	padding: 0 !important;
+	position: absolute;
+	text-align: center;
+	width: 100%;
 }
 
 .flickity-rtl .flickity-page-dots {
@@ -161,13 +160,13 @@
 }
 
 .flickity-page-dots .dot {
-	display: inline-block;
-	width: 9px;
-	height: 9px;
-	margin: 0 6px;
 	background: hsla(0, 0%, 0, 0.3);
 	border-radius: 50%;
 	cursor: pointer;
+	display: inline-block;
+	height: 9px;
+	margin: 0 6px;
+	width: 9px;
 }
 
 .flickity-page-dots .dot.is-selected {
