--- a/src/components/responsive-tabs-control/styles/editor.scss
+++ b/src/components/responsive-tabs-control/styles/editor.scss
@@ -50,7 +50,7 @@
 		}
 
 		&:not(.is-active):hover {
-			background: #fafafa;
+			background: $light-gray-100;
 			border-color: #999;
 			box-shadow: inset 0 -1px 0 #999;
 			color: $dark-gray-500;
