--- a/src/components/visual-dropdown/styles/editor.scss
+++ b/src/components/visual-dropdown/styles/editor.scss
@@ -32,7 +32,7 @@
 		padding: 4px;
 
 		&:hover {
-			background: $dark-opacity-light-200;
+			background: $light-gray-200;
 			color: $dark-gray-900;
 		}
 
@@ -66,7 +66,7 @@
 		}
 
 		&:focus {
-			box-shadow: 0 0 0 4px #f4f4f5, 0 0 0 6px $blue-medium-500;
+			box-shadow: 0 0 0 4px $light-gray-200, 0 0 0 6px $blue-medium-500;
 			color: $dark-gray-900;
 			outline: 2px solid transparent;
 			outline-offset: -2px;
@@ -75,7 +75,7 @@
 		&:active:enabled {
 			background: $white;
 			border-color: rgba(25, 30, 35, 0.3);
-			box-shadow: 0 0 0 4px #f4f4f5, 0 0 0 6px $blue-medium-500;
+			box-shadow: 0 0 0 4px $light-gray-200, 0 0 0 6px $blue-medium-500;
 		}
 	}
 
@@ -195,7 +195,8 @@
 
 .components-coblocks-visual-dropdown__popover {
 	.components-coblocks-visual-dropdown__button-wrapper:hover {
-		background: $light-gray-100;
+		background: $light-gray-200;
+		color: $dark-gray-900;
 	}
 }
 
@@ -210,7 +211,7 @@
 		}
 
 		.components-coblocks-visual-dropdown__button-wrapper:hover {
-			background: $light-gray-100;
+			background: $light-gray-200;
 
 			.editor-block-styles__item-label {
 				color: $dark-gray-900;
