--- a/src/sidebars/block-manager/styles/editor.scss
+++ b/src/sidebars/block-manager/styles/editor.scss
@@ -34,7 +34,7 @@
 
 	// Block category wrappers.
 	.coblocks-block-manager__section {
-		border-top: 1px solid #e2e4e7;
+		border-top: 1px solid $light-gray-500;
 		margin-top: 2.1em;
 
 		&:first-of-type {
