--- a/src/components/block-gallery/styles/editor/_flickity-arrows.scss
+++ b/src/components/block-gallery/styles/editor/_flickity-arrows.scss
@@ -1,6 +1,6 @@
 .has-no-arrows {
 	.flickity-prev-next-button {
-		background-color: $blue;
+		background-color: theme(primary);
 		border-radius: 4px;
 		border: none;
 		display: none;
