--- a/src/blocks/shape-divider/styles/editor.scss
+++ b/src/blocks/shape-divider/styles/editor.scss
@@ -30,8 +30,8 @@
 		width: 100%;
 
 		&::after {
-			background: #0085ba;
-			border: 2px solid #fff;
+			background: $blue;
+			border: 2px solid $white;
 			border-radius: 50%;
 			bottom: 4px;
 			content: "";
@@ -60,7 +60,7 @@
 
 	.wp-block-coblocks-shape-divider__svg-wrapper.is-resizing::after,
 	.wp-block-coblocks-shape-divider__alt-wrapper.is-resizing::after {
-		background: #0085ba;
+		background: $blue;
 		opacity: 1;
 	}
 
