--- a/src/blocks/accordion/styles/editor.scss
+++ b/src/blocks/accordion/styles/editor.scss
@@ -28,18 +28,18 @@
 // The "Add Accordion Item" button
 .wp-block-coblocks-accordion {
 	.components-coblocks-add-accordion-item__button.components-button {
-		background: rgba(139, 139, 150, 0.1);
+		background: $dark-opacity-light-200;
+		border: 1px dashed $dark-gray-150;
 		border-radius: 0;
-		border: 1px dashed #d3d5d8;
 		box-shadow: none !important;
-		color: #555d66;
+		color: $dark-gray-500;
 		font-size: 14px;
-		height: 40px;
+		height: 46px;
 		justify-content: center;
 		line-height: 31px;
-		padding: 0 8px 0 8px;
+		padding: 0 5px;
 		text-align: center;
-		transition: color 0.2s ease;
+		transition: all 0.2s ease;
 		width: 100%;
 
 		svg {
@@ -47,7 +47,8 @@
 		}
 
 		&:hover {
-			color: #191e23;
+			border-color: $dark-gray-900;
+			color: $dark-gray-800;
 		}
 	}
 }
