--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -28,7 +28,7 @@
 
 				&::before,
 				&::after {
-					background: #0085ba;
+					background: $blue;
 					content: "";
 					display: block;
 					height: 100%;
@@ -100,7 +100,7 @@
 				}
 			}
 
-			&.is-hero-resizing{
+			&.is-hero-resizing {
 				.wp-block-coblocks-hero__box {
 					&.is-resizing {
 						&::after {
@@ -140,17 +140,17 @@
 		margin-bottom: 2em;
 
 		div {
-			background: #fff;
+			background: $white;
 			padding: 1px;
 		}
 
 		.components-button {
-			background: #edeff0;
-			padding: 20px;
+			background: $light-gray-300;
 			border: 0;
 			border-radius: 0 !important;
 			box-shadow: none;
 			height: 100%;
+			padding: 20px;
 			width: 100%;
 
 			svg {
@@ -158,18 +158,18 @@
 			}
 
 			&:hover {
-				background: #e3e4e7;
-				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px #fff;
+				background: $light-gray-500;
+				box-shadow: inset 0 0 0 1px $dark-gray-500, inset 0 0 0 2px $white;
 			}
 
 			&:active:enabled {
-				background: #e3e4e7;
-				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px #fff;
+				background: $light-gray-500;
+				box-shadow: inset 0 0 0 1px $dark-gray-500, inset 0 0 0 2px $white;
 			}
 
 			&:focus:enabled {
-				background: #e3e4e7;
-				box-shadow: inset 0 0 0 1px #555d66, inset 0 0 0 2px #fff;
+				background: $light-gray-500;
+				box-shadow: inset 0 0 0 1px $dark-gray-500, inset 0 0 0 2px $white;
 			}
 		}
 
@@ -178,10 +178,10 @@
 		}
 
 		.is-selected .components-button {
-			background: #555d66;
+			background: $dark-gray-500;
 
 			&:focus:enabled {
-				background: #555d66;
+				background: $dark-gray-500;
 			}
 		}
 
