--- a/src/blocks/map/styles/editor.scss
+++ b/src/blocks/map/styles/editor.scss
@@ -4,7 +4,7 @@
 
 		.components-placeholder__fieldset {
 			span {
-				color: #555d66;
+				color: $dark-gray-500;
 			}
 
 			.components-button {
@@ -26,7 +26,7 @@
 
 		.invalid-google-maps-api-key {
 			clear: both;
-			color: $red !important;
+			color: $alert-red !important;
 			display: block;
 			text-align: center;
 			width: 100%;
@@ -94,7 +94,7 @@ $styles: (standard), (silver), (retro), (dark), (night), (aubergine);
 			margin-bottom: 5px;
 		}
 	}
-  	.components-block-coblocks-map-api-key-remove__button {
+	.components-block-coblocks-map-api-key-remove__button {
 		margin-left: 5px;
-  	}
+	}
 }
