--- a/src/blocks/row/styles/editor.scss
+++ b/src/blocks/row/styles/editor.scss
@@ -2,7 +2,7 @@
 	display: block;
 
 	.components-placeholder {
-		color: #191e23;
+		color: $dark-gray-900;
 	}
 
 	.wp-block-coblocks-row__inner.has-no-gutter {
@@ -174,10 +174,10 @@
 
 	// Width tag that pops up.
 	.coblocks-resizeable-width {
-		background: #0085ba;
-		border: 2px solid #fff;
+		background: $blue;
+		border: 2px solid $white;
 		border-radius: 4px;
-		color: #fff;
+		color: $white;
 		font-family: "Helvetica Neue", sans-serif;
 		font-size: 10px;
 		line-height: 1;
@@ -206,14 +206,14 @@
 
 		&::before {
 			border-color: rgba(255, 255, 255, 0);
-			border-top-color: #fff;
+			border-top-color: $white;
 			border-width: 6px;
 			margin-left: -6px;
 		}
 
 		&::after {
 			border-color: rgba(0, 133, 186, 0);
-			border-top-color: #0085ba;
+			border-top-color: $blue;
 			border-width: 4px;
 			margin-left: -4px;
 		}
@@ -553,11 +553,11 @@ div[data-type="coblocks/column"] {
 				position: relative;
 
 				.components-button {
-					background: rgba(139, 139, 150, 0.1);
-					border: 1px dashed #8d96a0;
+					background: $dark-opacity-light-200;
+					border: 1px dashed $dark-gray-150;
 					border-radius: 0;
 					box-shadow: none !important;
-					color: #555d66;
+					color: $dark-gray-500;
 					display: block;
 					font-size: 14px;
 					height: 40px !important;
@@ -575,8 +575,8 @@ div[data-type="coblocks/column"] {
 					}
 
 					&:hover {
-						color: #191e23;
-						border-color: #555d66;
+						border-color: $dark-gray-500;
+						color: $dark-gray-900;
 					}
 				}
 			}
