--- a/src/components/grid-control/styles/editor.scss
+++ b/src/components/grid-control/styles/editor.scss
@@ -14,8 +14,8 @@
 	}
 
 	.components-toggle-control {
-		border-top: 1px solid #e2e4e7;
-		color: #555d66;
+		border-top: 1px solid $light-gray-500;
+		color: $dark-gray-500;
 		margin: 16px -16px -16px;
 		padding: 18px 16px 14px;
 		width: calc(100% + 32px);
