--- a/src/components/orientation/styles/editor.scss
+++ b/src/components/orientation/styles/editor.scss
@@ -12,14 +12,14 @@
 		margin-bottom: 4px;
 
 		.is-primary + .is-primary {
-			border-left: 1px solid rgba(#fff, 0.2);
+			border-left: 1px solid rgba($white, 0.2);
 		}
 	}
 
 	.components-button-group .components-button {
 		appearance: none;
 		background: $white;
-		border: 1px solid #8d96a0;
+		border: 1px solid $dark-gray-150;
 		box-shadow: none;
 		color: $dark-gray-500;
 		height: 33px;
@@ -42,7 +42,7 @@
 		&:hover {
 			border-color: $dark-gray-500;
 			box-shadow: none;
-			color: #191e23;
+			color: $dark-gray-900;
 		}
 
 		&:active:enabled {
@@ -53,7 +53,7 @@
 		&:focus:enabled {
 			background: $dark-gray-500 !important;
 			border-color: $dark-gray-500;
-			box-shadow: 0 0 0 0 $dark-gray-500, inset 0 0 0 1px #fff;
+			box-shadow: 0 0 0 0 $dark-gray-500, inset 0 0 0 1px $white;
 			color: $white !important;
 			outline: 2px solid transparent;
 			outline-offset: -2px;
@@ -67,7 +67,7 @@
 
 			&:focus,
 			&:active:enabled {
-				box-shadow: 0 0 0 0 $dark-gray-500, inset 0 0 0 1px #fff;
+				box-shadow: 0 0 0 0 $dark-gray-500, inset 0 0 0 1px $white;
 				outline: 2px solid transparent;
 				outline-offset: -2px;
 			}
