--- a/src/components/responsive-base-control/styles/editor.scss
+++ b/src/components/responsive-base-control/styles/editor.scss
@@ -25,13 +25,13 @@
 		width: 30px;
 
 		&:focus {
-			background-color: #555d66 !important;
-			box-shadow:  inset 0 0 0 1px #fff;
+			background-color: $dark-gray-500 !important;
+			box-shadow: inset 0 0 0 1px $white;
 			outline: 2px solid transparent;
 			outline-offset: -2px;
 
 			svg {
-				fill: #fff;
+				fill: $white;
 			}
 		}
 	}
