--- a/src/components/responsive-tabs-control/styles/editor.scss
+++ b/src/components/responsive-tabs-control/styles/editor.scss
@@ -16,9 +16,9 @@
 	&-item {
 		appearance: none;
 		background: $white;
-		border: 1px solid #8d96a0;
+		border: 1px solid $dark-gray-150;
 		border-radius: 4px;
-		color: #6c7781;
+		color: $dark-gray-300;
 		height: 28px;
 		line-height: 1;
 		margin: 0;
@@ -37,8 +37,8 @@
 		}
 
 		&:focus {
-			border-color: #00a0d2 !important;
-			color: #00a0d2;
+			border-color: $blue-medium-500 !important;
+			color: $blue-medium-500;
 			outline: 2px solid transparent;
 			outline-offset: -2px;
 		}
@@ -50,7 +50,7 @@
 		}
 
 		&:not(.is-active):hover {
-			background: #fafafa;
+			background: $light-gray-100;
 			border-color: #999;
 			box-shadow: inset 0 -1px 0 #999;
 			color: $dark-gray-500;
@@ -64,7 +64,7 @@
 			z-index: 1;
 
 			&:focus {
-				background: #00a0d2;
+				background: $blue-medium-500;
 			}
 		}
 
