--- a/src/components/size-control/styles/editor.scss
+++ b/src/components/size-control/styles/editor.scss
@@ -19,7 +19,7 @@
 
 	.components-button-group .components-button {
 		background: none;
-		border: 1px solid #8d96a0;
+		border: 1px solid $dark-gray-150;
 		box-shadow: 0 0 0 transparent;
 		position: relative;
 		text-shadow: none;
@@ -29,9 +29,9 @@
 			&,
 			&:focus,
 			&:active {
-				background: #555d66;
-				border-color: #555d66;
-				color: #fff;
+				background: $dark-gray-500;
+				border-color: $dark-gray-500;
+				color: $white;
 				cursor: default;
 			}
 		}
