Add theme(primary) to Hero block

--- a/src/blocks/hero/styles/editor.scss
+++ b/src/blocks/hero/styles/editor.scss
@@ -28,7 +28,7 @@
 
 				&::before,
 				&::after {
-					background: $blue;
+					background: theme(primary);
 					content: "";
 					display: block;
 					height: 100%;
