--- a/src/components/responsive-tabs-control/styles/editor.scss
+++ b/src/components/responsive-tabs-control/styles/editor.scss
@@ -18,7 +18,7 @@
 		background: $white;
 		border: 1px solid $dark-gray-150;
 		border-radius: 4px;
-		color: $dark-gray-300;
+		color: $dark-gray-500;
 		height: 28px;
 		line-height: 1;
 		margin: 0;
@@ -37,22 +37,21 @@
 		}
 
 		&:focus {
-			border-color: $blue-medium-500 !important;
-			color: $blue-medium-500;
+			background: $white;
+			border-color: $dark-gray-500;
+			box-shadow: inset 0 0 0 1px $white, inset 0 0 0 2px $dark-gray-500 !important;
 			outline: 2px solid transparent;
 			outline-offset: -2px;
 		}
 
 		&:not(.is-active):active:enabled {
-			background: #eee;
-			border-color: #999;
-			box-shadow: inset 0 1px 0 #999;
+			background: $light-gray-200;
+			border-color: $dark-gray-500;
+			box-shadow: 0 0 0;
 		}
 
 		&:not(.is-active):hover {
 			background: $light-gray-100;
-			border-color: #999;
-			box-shadow: inset 0 -1px 0 #999;
 			color: $dark-gray-500;
 			cursor: pointer;
 		}
@@ -64,7 +63,9 @@
 			z-index: 1;
 
 			&:focus {
-				background: $blue-medium-500;
+				background: $dark-gray-500;
+				box-shadow: 0 0 0;
+				color: $white;
 			}
 		}
 
