--- a/src/components/size-control/styles/editor.scss
+++ b/src/components/size-control/styles/editor.scss
@@ -25,6 +25,10 @@
 		text-shadow: none !important;
 		transition: box-shadow 0s linear;
 
+		&:hover {
+			background: $light-gray-100;
+		}
+
 		&.is-primary {
 			background: $dark-gray-500;
 			border-color: $dark-gray-500;
@@ -40,7 +44,7 @@
 		}
 
 		&:active {
-			background: $light-gray-100;
+			background: $light-gray-200;
 			border-color: $dark-gray-500;
 			box-shadow: inset 0 0 0 1px $white, inset 0 0 0 3px $dark-gray-500;
 			cursor: default;
@@ -50,6 +54,11 @@
 				border-color: $dark-gray-500;
 				box-shadow: 0 0 0;
 			}
+
+			// &:focus {
+			// 	background: $dark-gray-500;
+			// 	color: $white;
+			// }
 		}
 
 		&:focus {
