--- a/src/components/typography-controls/styles/editor.scss
+++ b/src/components/typography-controls/styles/editor.scss
@@ -7,8 +7,8 @@
 		.components-select-control__input {
 			appearance: none;
 			background: 0 0;
-			border-radius: 4px;
 			border: 1px solid $dark-gray-150;
+			border-radius: 4px;
 			box-shadow: 0 0 0 transparent;
 			color: $dark-gray-500;
 			cursor: pointer;
@@ -26,23 +26,25 @@
 			&:hover {
 				background: $light-gray-100;
 				border-color: #999;
-				box-shadow: inset 0 -1px 0 #999;
 				color: $dark-gray-800;
 				text-decoration: none;
 			}
 
 			&:active:enabled {
-				background: #eee;
-				border-color: #999;
-				box-shadow: inset 0 1px 0 #999;
+				background: $light-gray-200;
 			}
 
-			&:focus:enabled {
-				background: $light-gray-100;
-				border-color: #999;
-				box-shadow: inset 0 -1px 0 #999, 0 0 0 2px $blue-medium-200;
+			&:focus {
+				background: $white;
+				border-color: theme(outlines);
+				box-shadow: 0 0 0 1px theme(outliness);
 				color: $dark-gray-800;
 				text-decoration: none;
+
+				&:hover {
+					border-color: theme(outlines);
+					box-shadow: 0 0 0 1px theme(outliness);
+				}
 			}
 		}
 
