--- a/src/blocks/pricing-table/styles/editor.scss
+++ b/src/blocks/pricing-table/styles/editor.scss
@@ -2,6 +2,11 @@
 	margin-bottom: -15px;
 	margin-top: -15px;
 
+	[data-block] {
+		margin-bottom: 0;
+		margin-top: 0;
+	}
+
 	.wp-block-coblocks-pricing-table {
 		&__inner {
 			margin-left: 0 !important;
