--- a/src/components/block-gallery/styles/editor.scss
+++ b/src/components/block-gallery/styles/editor.scss
@@ -14,3 +14,10 @@
 .components-coblocks-size-control--shadow {
 	margin-bottom: 2.85em;
 }
+
+.components-coblocks-image-link {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 20;
+}
