Refactor the Google Map block to make it easier (#510)
* [tiny] Cleanup eslint warnings and simplify logic

* [minor] Refactor map to use embed when API key is not present

* [tiny] Tweak UX of "edit" controls

The Edit toolbar control only shows if an address has been entered

* [tiny] Tweak "Edit" icon and title

* [tiny] Tweak UX of Map Settings Panel visibility

Map Settings panel now requires an address to be visible.

* [tiny] Tweak API Key PanelBody initialOpen prop to be based on address

* Fix issue where dragging the map smaller in height would overflow

* [tiny] Tweak initialOpen

* Use ExternalLink component in Maps settings panel

Closes #535

* Change button text on API key save

* deleting iml file

* removing package-lock.json

* Add &nbsp; following the |

* Set Google Maps API Key PanelBody initialOpen to false

--- a/src/blocks/map/styles/editor.scss
+++ b/src/blocks/map/styles/editor.scss
@@ -38,6 +38,11 @@
 	&.is-selected .components-resizable-box__handle {
 		z-index: 30;
 	}
+
+	.iframe__overflow-wrapper {
+		height: 100%;
+		overflow: hidden;
+	}
 }
 
 // Map styles.
