--- a/src/blocks/form/styles/editor.scss
+++ b/src/blocks/form/styles/editor.scss
@@ -80,6 +80,12 @@
 	}
 }
 
+.edit-post-settings-sidebar__panel-block {
+	.components-block-coblocks-form-recaptcha-key__custom-input {
+		margin-bottom: 15px !important;
+	}
+}
+
 // Core themes.
 .is-twentynineteen {
 	.coblocks-form {
