--- a/src/blocks/form/styles/style.scss
+++ b/src/blocks/form/styles/style.scss
@@ -8,6 +8,16 @@
 	.coblocks-field {
 		margin: 0 0 1.25rem 0;
 		width: 100%;
+
+		&.verify {
+			opacity: 0;
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 0;
+			width: 0;
+			z-index: -1;
+		}
 	}
 
 	textarea {
