--- a/src/components/block-gallery/styles/editor.scss
+++ b/src/components/block-gallery/styles/editor.scss
@@ -1,5 +1,6 @@
 @import "editor/gallery-item";
 @import "editor/gallery-item-menus";
+@import "editor/gallery-item-link";
 @import "editor/uploader";
 @import "editor/radius";
 @import "editor/flickity-arrows";
@@ -13,11 +14,4 @@
 
 .components-coblocks-size-control--shadow {
 	margin-bottom: 2.85em;
-}
-
-.components-coblocks-image-link {
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 20;
 }
