--- a/src/blocks/row/styles/editor.scss
+++ b/src/blocks/row/styles/editor.scss
@@ -54,8 +54,8 @@
 
 		// Adjust the individual column block.
 		> [data-type="coblocks/column"] {
-			display: flex;
-			flex-direction: column;
+			// display: flex;
+			// flex-direction: column;
 
 			.wp-block-coblocks-column {
 				margin: 0 !important;
@@ -83,11 +83,12 @@
 
 			> .editor-block-list__block-edit {
 				margin-bottom: 0;
-				margin-top: -12px;
+				margin-top: 0;
+				// margin-top: -12px;
 
-				&::before {
-					top: -1px;
-				}
+				// &::before {
+				// 	top: -1px;
+				// }
 
 				> [data-block] {
 					margin-bottom: 0;
