--- a/src/blocks/menu-item/styles/editor.scss
+++ b/src/blocks/menu-item/styles/editor.scss
@@ -1,6 +1,7 @@
 .block-editor-block-list__block-edit .wp-block-coblocks-menu-item {
 	display: block;
 	flex: 1 100%;
+	margin-bottom: 0;
 
 	.block-editor-media-placeholder {
 		margin: 0 0 1em;
