--- a/src/blocks/menu-item/styles/editor.scss
+++ b/src/blocks/menu-item/styles/editor.scss
@@ -2,10 +2,11 @@
 	display: block;
 	flex: 1 100%;
 	margin-bottom: 0;
+	padding: 0 !important;
 
 	.block-editor-media-placeholder {
 		margin: 0 0 1em;
-		outline: 1px dashed #8d96a0;
+		outline: 1px dashed $dark-gray-150;
 		padding: 0;
 
 		.components-placeholder__label,
