--- a/src/blocks/menu-item/styles/editor.scss
+++ b/src/blocks/menu-item/styles/editor.scss
@@ -1,4 +1,4 @@
-.block-editor-block-list__block-edit .wp-block-coblocks-menu-item {
+.wp-block-coblocks-menu-item {
 	display: block;
 	flex: 1 100%;
 	margin-bottom: 0;
@@ -19,4 +19,9 @@
 			}
 		}
 	}
+}
+
+.wp-block[data-type="coblocks/menu-item"] {
+	flex: 1 50%;
+	max-width: calc(50% - 10px) !important;
 }
