--- a/src/blocks/menu-item/styles/editor.scss
+++ b/src/blocks/menu-item/styles/editor.scss
@@ -1,7 +1,7 @@
 .wp-block-coblocks-menu-item {
 	display: block;
 	flex: 1 100%;
-	margin-bottom: 0;
+	margin-bottom: 0 !important;
 	padding: 0 !important;
 
 	.block-editor-media-placeholder {
