--- a/src/blocks/menu/styles/style.scss
+++ b/src/blocks/menu/styles/style.scss
@@ -36,5 +36,13 @@
 			flex: 1 100%;
 			max-width: 100%;
 		}
+
+		figure,
+		.components-placeholder {
+			flex: 0 0 auto;
+			margin-bottom: 0;
+			margin-right: 20px;
+			width: 150px;
+		}
 	}
 }
