--- a/src/blocks/menu-item/styles/style.scss
+++ b/src/blocks/menu-item/styles/style.scss
@@ -2,12 +2,14 @@
 	flex: 1 50%;
 	margin-bottom: 2.5em;
 
-	&:nth-child(even) {
-		padding-right: 25px;
-	}
+	.wp-block-coblocks-menu:not(.is-style-list) & {
+		&:nth-child(even) {
+			padding-right: 25px;
+		}
 
-	&:nth-child(odd) {
-		padding-left: 25px;
+		&:nth-child(odd) {
+			padding-left: 25px;
+		}
 	}
 
 	figure {
