--- a/src/blocks/menu/styles/editor.scss
+++ b/src/blocks/menu/styles/editor.scss
@@ -58,3 +58,9 @@
 		flex-direction: column;
 	}
 }
+
+.coblocks-editor-block-styles .editor-block-styles__item-preview {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
