Hide the placeholder menu-item when the menu block is not selected.

--- a/src/blocks/menu/styles/editor.scss
+++ b/src/blocks/menu/styles/editor.scss
@@ -50,6 +50,10 @@
 			outline: 1px dashed $dark-gray-500;
 		}
 	}
+
+	&:not(.child-selected) .wp-block[data-type="coblocks/menu-item"] .is-empty {
+		display: none;
+	}
 }
 
 /* On small screens, we are no longer using row direction but column */
