Force margins to prevent auto centering single menu item on last row.

--- a/src/blocks/menu-item/styles/editor.scss
+++ b/src/blocks/menu-item/styles/editor.scss
@@ -60,4 +60,6 @@
 .wp-block[data-type="coblocks/menu-item"] {
 	flex: 1 50%;
 	max-width: calc(50% - 10px) !important;
+	margin-left: 5px;
+	margin-right: 5px;
 }
