--- a/src/blocks/menu/styles/style.scss
+++ b/src/blocks/menu/styles/style.scss
@@ -18,6 +18,22 @@
 		padding: 25px;
 	}
 
+	figure {
+		display: flex;
+		width: 100%;
+		padding-top: 100%;
+		position: relative;
+		overflow: hidden;
+
+		img {
+			position: absolute;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
 	&:not(.is-style-justify):not(.is-style-list) {
 		.wp-block-coblocks-menu-item {
 			text-align: center;
@@ -43,6 +59,8 @@
 			margin-bottom: 0;
 			margin-right: 20px;
 			max-width: 130px;
+			max-height: 130px;
+			padding-top: 130px;
 		}
 	}
 }
