Tweak min height for placeholders

--- a/src/blocks/menu/menu-item/styles/editor.scss
+++ b/src/blocks/menu/menu-item/styles/editor.scss
@@ -6,6 +6,7 @@
 
 	.editor-media-placeholder {
 		margin: 0 0 1.65em;
+		min-height: 264px;
 		outline: 1px dashed $dark-gray-150;
 		padding: 0;
 		position: relative;
