Fix margin left issue

--- a/src/blocks/row/styles/editor.scss
+++ b/src/blocks/row/styles/editor.scss
@@ -54,6 +54,7 @@
 
 		// Adjust the individual column block.
 		> [data-type="coblocks/column"] {
+			margin-left: 0;
 			// display: flex;
 			// flex-direction: column;
 
